[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day_1_1"
path = "src/bin/d_1_1.rs"

[[bin]]
name = "day_1_2"
path = "src/bin/d_1_2.rs"

[[bin]]
name = "day_2_1"
path = "src/bin/d_2_1.rs"

[[bin]]
name = "day_2_2"
path = "src/bin/d_2_2.rs"

[[bin]]
name = "day_3_1"
path = "src/bin/d_3_1.rs"

[[bin]]
name = "day_3_2"
path = "src/bin/d_3_2.rs"

[[bin]]
name = "day_4_1"
path = "src/bin/d_4_1.rs"

[dependencies]
