[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day_1_1"
path = "src/bin/d_1_1.rs"

[[bin]]
name = "day_1_2"
path = "src/bin/d_1_2.rs"

[[bin]]
name = "day_2_1"
path = "src/bin/d_2_1.rs"

[[bin]]
name = "day_2_2"
path = "src/bin/d_2_2.rs"

[[bin]]
name = "day_3_1"
path = "src/bin/d_3_1.rs"

[[bin]]
name = "day_3_2"
path = "src/bin/d_3_2.rs"

[[bin]]
name = "day_4_1"
path = "src/bin/d_4_1.rs"

[[bin]]
name = "day_4_2"
path = "src/bin/d_4_2.rs"

[[bin]]
name = "day_5_1"
path = "src/bin/d_5_1.rs"

[[bin]]
name = "day_5_2"
path = "src/bin/d_5_2.rs"

[[bin]]
name = "day_6_1"
path = "src/bin/d_6_1.rs"

[[bin]]
name = "day_6_2"
path = "src/bin/d_6_2.rs"

[[bin]]
name = "day_7_1"
path = "src/bin/d_7_1.rs"

[[bin]]
name = "day_7_2"
path = "src/bin/d_7_2.rs"

[[bin]]
name = "day_8_1"
path = "src/bin/d_8_1.rs"

[[bin]]
name = "day_8_2"
path = "src/bin/d_8_2.rs"

[[bin]]
name = "day_9_1"
path = "src/bin/d_9_1.rs"

[[bin]]
name = "day_9_2"
path = "src/bin/d_9_2.rs"

[[bin]]
name = "day_10_1"
path = "src/bin/d_10_1.rs"

[dependencies]
