[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day_1_1"
path = "src/bin/d_1_1.rs"

[[bin]]
name = "day_1_2"
path = "src/bin/d_1_2.rs"

[[bin]]
name = "day_2_1"
path = "src/bin/d_2_1.rs"

[[bin]]
name = "day_2_2"
path = "src/bin/d_2_2.rs"

[[bin]]
name = "day_3_1"
path = "src/bin/d_3_1.rs"

[[bin]]
name = "day_3_2"
path = "src/bin/d_3_2.rs"

[[bin]]
name = "day_4_1"
path = "src/bin/d_4_1.rs"

[[bin]]
name = "day_4_2"
path = "src/bin/d_4_2.rs"

[[bin]]
name = "day_5_1"
path = "src/bin/d_5_1.rs"

[[bin]]
name = "day_5_2"
path = "src/bin/d_5_2.rs"

[[bin]]
name = "day_6_1"
path = "src/bin/d_6_1.rs"

[[bin]]
name = "day_6_2"
path = "src/bin/d_6_2.rs"

[[bin]]
name = "day_7_1"
path = "src/bin/d_7_1.rs"

[[bin]]
name = "day_7_2"
path = "src/bin/d_7_2.rs"

[[bin]]
name = "day_8_1"
path = "src/bin/d_8_1.rs"

[[bin]]
name = "day_8_2"
path = "src/bin/d_8_2.rs"

[[bin]]
name = "day_9_1"
path = "src/bin/d_9_1.rs"

[[bin]]
name = "day_9_2"
path = "src/bin/d_9_2.rs"

[[bin]]
name = "day_10_1"
path = "src/bin/d_10_1.rs"

[[bin]]
name = "day_10_2"
path = "src/bin/d_10_2.rs"

[[bin]]
name = "day_11_1"
path = "src/bin/d_11_1.rs"

[[bin]]
name = "day_11_2"
path = "src/bin/d_11_2.rs"

[[bin]]
name = "day_12_1"
path = "src/bin/d_12_1.rs"

[[bin]]
name = "day_12_2"
path = "src/bin/d_12_2.rs"

[[bin]]
name = "day_13_1"
path = "src/bin/d_13_1.rs"

[[bin]]
name = "day_13_2"
path = "src/bin/d_13_2.rs"

[[bin]]
name = "day_14_1"
path = "src/bin/d_14_1.rs"

[[bin]]
name = "day_14_2"
path = "src/bin/d_14_2.rs"

[[bin]]
name = "day_15_1"
path = "src/bin/d_15_1.rs"

[[bin]]
name = "day_15_2"
path = "src/bin/d_15_2.rs"

[[bin]]
name = "day_16_1"
path = "src/bin/d_16_1.rs"

[[bin]]
name = "day_16_2"
path = "src/bin/d_16_2.rs"

[[bin]]
name = "day_17_1"
path = "src/bin/d_17_1.rs"

[[bin]]
name = "day_17_2"
path = "src/bin/d_17_2.rs"

[[bin]]
name = "day_18_1"
path = "src/bin/d_18_1.rs"

[[bin]]
name = "day_18_2"
path = "src/bin/d_18_2.rs"

[[bin]]
name = "day_19_1"
path = "src/bin/d_19_1.rs"

[[bin]]
name = "day_19_2"
path = "src/bin/d_19_2.rs"

[dependencies]
